@@ -260,11 +260,6 @@ name|bEnd
 init|=
 literal|1.0f
 decl_stmt|;
-DECL|field|reader
-specifier|private
-name|IndexReader
-name|reader
-decl_stmt|;
 DECL|field|searcher
 specifier|private
 name|IndexSearcher
@@ -1146,24 +1141,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|IndexReader
-operator|.
-name|isLocked
-argument_list|(
-name|spellIndex
-argument_list|)
-condition|)
-block|{
-name|IndexReader
-operator|.
-name|unlock
-argument_list|(
-name|spellIndex
-argument_list|)
-expr_stmt|;
-block|}
 name|IndexWriter
 name|writer
 init|=
@@ -1182,6 +1159,22 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+comment|//close the old searcher
+name|searcher
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|searcher
+operator|=
+operator|new
+name|IndexSearcher
+argument_list|(
+name|this
+operator|.
+name|spellIndex
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * Check whether the word exists in the index.    * @param word    * @throws IOException    * @return true iff the word exists in the index    */
 DECL|method|exist
@@ -1195,25 +1188,8 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|reader
-operator|==
-literal|null
-condition|)
-block|{
-name|reader
-operator|=
-name|IndexReader
-operator|.
-name|open
-argument_list|(
-name|spellIndex
-argument_list|)
-expr_stmt|;
-block|}
 return|return
-name|reader
+name|searcher
 operator|.
 name|docFreq
 argument_list|(
@@ -1241,24 +1217,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|IndexReader
-operator|.
-name|isLocked
-argument_list|(
-name|spellIndex
-argument_list|)
-condition|)
-block|{
-name|IndexReader
-operator|.
-name|unlock
-argument_list|(
-name|spellIndex
-argument_list|)
-expr_stmt|;
-block|}
 name|IndexWriter
 name|writer
 init|=
@@ -1267,17 +1225,11 @@ name|IndexWriter
 argument_list|(
 name|spellIndex
 argument_list|,
+literal|true
+argument_list|,
 operator|new
 name|WhitespaceAnalyzer
 argument_list|()
-argument_list|,
-operator|!
-name|IndexReader
-operator|.
-name|indexExists
-argument_list|(
-name|spellIndex
-argument_list|)
 argument_list|)
 decl_stmt|;
 name|writer
@@ -1390,25 +1342,6 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-comment|// close reader so it will be re-opened (and see the new content) when exist()
-comment|// is called the next time:
-if|if
-condition|(
-name|reader
-operator|!=
-literal|null
-condition|)
-block|{
-name|reader
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|reader
-operator|=
-literal|null
-expr_stmt|;
-block|}
 comment|// also re-open the spell index to see our own changes when the next suggestion
 comment|// is fetched:
 name|searcher
@@ -1749,40 +1682,6 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-block|}
-comment|/**    * Closes the internal IndexReader.    */
-DECL|method|finalize
-specifier|protected
-name|void
-name|finalize
-parameter_list|()
-throws|throws
-name|Throwable
-block|{
-try|try
-block|{
-if|if
-condition|(
-name|reader
-operator|!=
-literal|null
-condition|)
-block|{
-name|reader
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-finally|finally
-block|{
-name|super
-operator|.
-name|finalize
-argument_list|()
-expr_stmt|;
 block|}
 block|}
 block|}
